Fix alignment of iPhone

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -93,7 +93,7 @@ h1, h2, h3, h4, h5, h6 {
     max-height: 400px;
 
     .iphone {
-      margin: 2em 0 0 -15px;
+      margin: 2em 0 0;
       width: 100%;
     }
   }
